--- a/home.html
+++ b/home.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <script>
+      window.addEventListener('DOMContentLoaded', () => {
+        document.body.classList.add('loaded');
+      });
+    </script>
   </head>
   <body>
     <header></header>
