--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <script>
-      window.addEventListener('DOMContentLoaded', () => {
-        document.body.classList.add('loaded');
+      window.addEventListener("DOMContentLoaded", () => {
+        document.body.classList.add("loaded");
       });
     </script>
   </head>
