added separate starfield.js file to promote code reuse

--- a/home.html
+++ b/home.html
@@ -31,47 +31,7 @@
       </div>
     </div>
   </main>
-  <script>
-    // minimal starfield background
-    const canvas = document.getElementById('starfield');
-    const ctx = canvas.getContext('2d');
-    let stars = [];
-
-    function resize() {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-    }
-    window.addEventListener('resize', resize);
-    resize();
-
-    function createStars(count) {
-      stars = [];
-      for (let i = 0; i < count; i++) {
-        stars.push({
-          x: Math.random() * canvas.width,
-          y: Math.random() * canvas.height,
-          r: Math.random() * 0.7 + 0.3,
-          o: Math.random() * 0.5 + 0.5,
-        });
-      }
-    }
-    createStars(window.innerWidth / 2);
-
-    function animate() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      for (const s of stars) {
-        ctx.globalAlpha = s.o;
-        ctx.beginPath();
-        ctx.arc(s.x, s.y, s.r, 0, 2 * Math.PI);
-        ctx.fillStyle = '#fff';
-        ctx.fill();
-      }
-      ctx.globalAlpha = 1;
-      requestAnimationFrame(animate);
-    }
-    animate();
-    window.addEventListener('resize', () => createStars(window.innerWidth / 2));
-  </script>
+  <script src="starfield.js"></script>
 </body>
 
 </html>
